[package]
name = "ruterm"
version = "0.2.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/georgiyozhegov/terminal"

readme = "README.md"
description = "Tiny library for working with the terminal"
keywords = ["terminal", "simple", "tui"]

[dependencies]
libc = {version = "0.2.153", optional = true}
termios = "0.3.3"

[features]
default = ["render", "style", "size"]
render = []
style = []
size = ["dep:libc"]
